# gaselect

./: .gitignore  ChangeLog  DESCRIPTION  NAMESPACE  cleanup  configure  configure.ac  cran-comments.md
.github/workflows/: check-pkg.yml
R/: .Rapp.history  Evaluator-validData.R  Evaluator.R  GenAlgControl.R  SEP.R  control.R  evaluate.R  fitness.R  formatSegmentation.R  genAlg.R  genAlgPLS.R  getEvalFun.R  subsets.R  toCControlList.R  validData.R
examples/: SEP.R  evaluatorFit.R  evaluatorLM.R  evaluatorUserFunction.R  fitness.R  genAlg.R  subsets.R
man/: GenAlg-class.Rd  GenAlg-constructor.Rd  GenAlgControl-class.Rd  GenAlgControl-constructor.Rd  GenAlgEvaluator-class.Rd  GenAlgEvaluator-getEvalFun-methods.Rd  GenAlgEvaluator-validData-methods.Rd  GenAlgEvaluator.Rd  GenAlgFitEvaluator-class.Rd  GenAlgFitEvaluator-constructor.Rd  GenAlgLMEvaluator-class.Rd  GenAlgLMEvaluator-constructor.Rd  GenAlgPLS-package.Rd  GenAlgPLSEvaluator-class.Rd  GenAlgPLSEvaluator-constructor.Rd  GenAlgUserEvaluator-class.Rd  GenAlgUserEvaluator-constructor.Rd  SEP-methods.Rd  SEPeval-methods.Rd  evaluate-methods.Rd  evaluatorLM.Rd  evaluatorPLS.Rd  evaluatorUserFunction.Rd  fitness-methods.Rd  fitness.Rd  fitnessEval-methods.Rd  fitnessEvolution.Rd  formatSegmentation-methods.Rd  genAlg-methods.Rd  genAlg.Rd  genAlgControl.Rd  genAlgEvalControl.Rd  genAlgPLS.Rd  getEvalFun-methods.Rd  getFitnessEvolution-methods.Rd  getFitnessEvolution.Rd  subsets-methods.Rd  subsets.Rd  toCControlList-methods.Rd  trueFitnessVal-methods.Rd  (+1 more)
src/: BICEvaluator.cpp  BICEvaluator.h  Chromosome.cpp  Chromosome.h  Control.cpp  Control.h  Evaluator.h  GenAlg.cpp  GenAlg.h  LMEvaluator.cpp  LMEvaluator.h  Logger.cpp  Logger.h  Makevars  Makevars.dbg  Makevars.in  Makevars.rel  Makevars.win  MultiThreadedPopulation.cpp  MultiThreadedPopulation.h  OnlineStddev.h  PLS.cpp  PLS.h  PLSEvaluator.cpp  PLSEvaluator.h  PLSSimpls.cpp  PLSSimpls.h  Population.cpp  Population.h  RNG.cpp  RNG.h  ShuffledSet.cpp  ShuffledSet.h  SingleThreadPopulation.cpp  SingleThreadPopulation.h  SynchronizedUnifGenerator__0__1.cpp  SynchronizedUnifGenerator__0__1.h  TruncatedGeomGenerator.h  UnifGenerator_0_1.cpp  UnifGenerator_0_1.h  (+8 more)
tools/m4/: ax_cxx_compile_stdcxx_11.m4
